--- a/style.css
+++ b/style.css
@@ -23,6 +23,30 @@ body{
     grid-column: span 4;
     background-color: black;
     opacity: 75%;
+    display: flex;
+    flex-direction: column;
+    padding-right: 10px;
+    word-wrap: break-word;
+    word-break: break-all;
+}
+
+.screen > div {
+    color: white;
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    line-height: normal;
+}
+
+.lower-part {
+    font-size: 2rem;
+    height: 50%;
+}
+
+.upper-part {
+    height: 50%;
+    font-size: 1.25rem;
 }
 
 .span-two {
